@startuml

title __PROJECTILEHW2's Class Diagram__\n

  package ProjectileHW2 {
    class JuicyOrange {
        {static} ~ ran : Random
        + JuicyOrange()
        + explode()
    }
  }
  

  package ProjectileHW2 {
    class Main {
        {static} + main()
    }
  }
  

  package ProjectileHW2 {
    abstract class Projectile {
        - x : int
        - y : int
        - dx : int
        - dy : int
        - explodeTime : int
        - timeCount : int
        + Projectile()
        + Projectile()
        + ticTok()
        {abstract} + explode()
    }
  }
  

  package ProjectileHW2 {
    class WaterBomb {
        + WaterBomb()
        + explode()
    }
  }
  

  package ProjectileHW2 {
    class WaterBottle {
        + WaterBottle()
        + explode()
    }
  }
  

  JuicyOrange -up-|> Projectile
  WaterBomb -up-|> Projectile
  WaterBottle -up-|> Projectile


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
